fixed spacing and redid grid for track listing

--- a/react-app/src/components/PlaylistDetail/PlaylistDetail.css
+++ b/react-app/src/components/PlaylistDetail/PlaylistDetail.css
@@ -121,7 +121,7 @@ i.pl.fas.fa-play {
   margin: 20px 0;
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: .05fr repeat(8, 1fr);
+  grid-template-columns: .05fr repeat(7, 1fr) .25fr .25fr;
   align-items: center;
   font-size: 13px;
   font-weight: 500;
